# rverse

./: .gitignore  AGENTS (3).md  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUI_DESIGN_BRIEF.md  README.md  RVRSE_BRIEF.md  STITCH-DESIGN.md  UAT_PLAYBOOK.md
.archive/: README.md
.archive/beads-historical/: config.yaml  metadata.json
.beads/: export-state.json  interactions.jsonl  issues.jsonl
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  tracking.yml
.github/workflows/: ci.yml  publish-develop.yml  release.yml
RVRSE/: BufferUtils.h  CMakeLists.txt  Constants.h  ExportRender.h  GUIColors.h  README.md  RVRSE.RPP  RVRSE.cpp  RVRSE.h  RVRSE.sln  Reverb.h  RvrseProcessor.h  SampleData.h  SampleLoader.cpp  SampleLoader.h  Stutter.h  TimeStretch.cpp  TimeStretch.h  TransitionTiming.h  TrimUtils.h  WaveformControl.h  config.h  dr_libs_impl.cpp
RVRSE/RVRSE.xcworkspace/: contents.xcworkspacedata
RVRSE/config/: RVRSE-ios.xcconfig  RVRSE-mac.xcconfig  RVRSE-web.mk  RVRSE-win.props
RVRSE/installer/: INSTALL-Windows.txt  INSTALL-macOS.txt  RVRSE.iss  changelog.txt  intro.rtf  known-issues.txt  license.rtf  readme-mac.rtf  readme-win-demo.rtf  readme-win.rtf
RVRSE/projects/: RVRSE-aax.vcxproj  RVRSE-aax.vcxproj.filters  RVRSE-app.vcxproj  RVRSE-app.vcxproj.filters  RVRSE-clap.vcxproj  RVRSE-clap.vcxproj.filters  RVRSE-vst2.vcxproj  RVRSE-vst2.vcxproj.filters  RVRSE-vst3.vcxproj  RVRSE-vst3.vcxproj.filters  RVRSE-wam-controller.mk  RVRSE-wam-processor.mk
RVRSE/projects/RVRSE-iOS.xcodeproj/: project.pbxproj
RVRSE/projects/RVRSE-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme  iOS-Update plists.xcscheme
RVRSE/projects/RVRSE-macOS.xcodeproj/: project.pbxproj
RVRSE/projects/RVRSE-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-CLAP.xcscheme  macOS-Update plists.xcscheme  macOS-VST2.xcscheme  macOS-VST3.xcscheme
RVRSE/resources/: IPlugAUViewController_vRVRSE.xib  RVRSE-AAX-Info.plist  RVRSE-AU-Info.plist  RVRSE-CLAP-Info.plist  RVRSE-Pages.xml  RVRSE-VST2-Info.plist  RVRSE-VST3-Info.plist  RVRSE-iOS-AUv3-Info.plist  RVRSE-iOS-AUv3Framework-Info.plist  RVRSE-iOS-Info.plist  RVRSE-iOS-LaunchScreen.storyboard  RVRSE-iOS-MainInterface.storyboard  RVRSE-macOS-AUv3-Info.plist  RVRSE-macOS-AUv3Framework-Info.plist  RVRSE-macOS-Info.plist  RVRSE-macOS-MainMenu.xib  RVRSEAU.h  RVRSEAUv3Appex.m  main.rc  main.rc_mac_dlg
RVRSE/scripts/: makedist-mac.sh  makedist-web.sh  makedist-win.bat  makeinstaller-mac.sh  makezip-win.py  update_installer-win.py  update_version-ios.py  update_version-mac.py
docs/: RVRSE-Feedback.md  RVRSE-v1.1.0-Plan.md
docs/prototypes/: stitch-code.html
hooks/: commit-msg  pre-commit  pre-push
scripts/: build-macos-installer.sh  sign-and-notarize.sh  sync-version.py
tests/: CMakeLists.txt  test_buffer_utils.cpp  test_constants.cpp  test_drag_and_drop.cpp  test_export_render.cpp  test_helpers.h  test_reverb.cpp  test_sample_loader.cpp  test_smoke.cpp  test_stutter.cpp  test_time_stretch.cpp  test_transition_timing.cpp  test_trim_utils.cpp
